2002-11-15 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Dicts/dicomV3.dic removed all the trailing (RET) when the
        the vr was also RET.
      * python/testSuite.py more tests added.

2002-11-14 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/testSuite.py unittest test suite added (uses Data)
      * Data/* dcm and acr files for the test suite.
      * glib dependance removed from un*x version. We now use ISO C99
        7.18 Integer types (see stdint.h)
        - python/Makefile, src/Makefile src/gdcm.h
      * src/ when an explicit vr (like dicom files) suddenly poped an
        implicit element we use to mark the underlying DictEntry of the
        concerned ElValue with "Implicit". This strategy was damageable
        too the public or provite dictionaries, since some of their vr
        would be changed. Since Header::FindLength heavily relies on the
        detection by Header::FindVR of falsely explicit elements, I
        added an extra ImplicitVr member to ElValue (boolean).
        The rest of the changes we the necessary adaptations.

2002-11-12 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * src/gdcmHeader::FindLength bug fix when trapping falsely explicit
        VR files.
      * src/gdcmHeader::FindVR: hard way fix of falsely explicit vr files.

2002-11-7 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * python/gdcm.i: added a typemap that converts a C++ hashing table
        to native Python dictionary.
      * python/demo/test.py:
        - now uses the native dictionary for exploration of gdcmHeader.
        - takes an optional filename argument (the file to parse).
      * src/gdcm.h and gdcmHeader.cxx: gdcmHeader now has an accessor on
        PubElVals hashing table. 
      * Dicts/dicomV3.dic removed error prone trailing spaces.

2002-11-6 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Python wrapping process moved away from src/Makefile to
        newly created python/Makefile (as well as gdcm.i)